--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cratoni</title>
     <link href="templatemo-3d-coverflow.css" rel="stylesheet">
+        <link href="images/logo.png" rel="icon">
 <!--
-
+    
 TemplateMo 595 3d coverflow
 
 https://templatemo.com/tm-595-3d-coverflow
@@ -334,3 +335,4 @@ https://templatemo.com/tm-595-3d-coverflow
 </body>
 
 </html>
+
