--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cratoni</title>
     <link href="templatemo-3d-coverflow.css" rel="stylesheet">
-        <link href="images/logo.png" rel="icon">
+        <link href="images/Logo.png" rel="icon">
 <!--
     
 TemplateMo 595 3d coverflow
@@ -335,4 +335,5 @@ https://templatemo.com/tm-595-3d-coverflow
 </body>
 
 </html>
+
 
