--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@ https://templatemo.com/tm-595-3d-coverflow
     <section id="about" class="section">
         <div class="about-content">
             <div class="about-header">
-                <h2>Discover 3D Coverflow</h2>
-                <p>A revolutionary way to showcase your visual content with stunning 3D effects and seamless interactions</p>
+                <h2>Who is behind the scene!?</h2>
+                <p>Hi, I’m Rishav Biswas — a passionate learner and aspiring developer. This is my digital biodata showcasing my journey, skills, and aspirations</p>
             </div>
             
             <div class="about-main">
@@ -335,5 +335,6 @@ https://templatemo.com/tm-595-3d-coverflow
 </body>
 
 </html>
+
 
 
