--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ https://templatemo.com/tm-595-3d-coverflow
              <div class="container-fluid product py-5 my-5">
         <div class="container py-5">
             <div class="section-title text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
-                <p class="fs-5 fw-medium fst-italic text-primary">Our Products</p>
+                <p class="fs-5 fw-medium fst-italic text-primary">who</p>
                 <h1 class="display-6">Pure goodness for a healthier you.</h1>
             </div>
             <div class="owl-carousel product-carousel wow fadeInUp" data-wow-delay="0.5s">
@@ -346,6 +346,7 @@ https://templatemo.com/tm-595-3d-coverflow
 </body>
 
 </html>
+
 
 
 
