--- a/index.html
+++ b/index.html
@@ -155,9 +155,9 @@ https://templatemo.com/tm-595-3d-coverflow
                 </div>
                 
                 <div class="about-info">
-                    <h3>Elevate Your Gallery Experience</h3>
-                    <p>3D Coverflow is brought to you by TemplateMo. Transform the way you present images with our cutting-edge 3D coverflow technology. Create immersive, interactive galleries that captivate your audience and leave a lasting impression.</p>
-                    <p>Whether you're showcasing portfolio pieces, product images, or creating an interactive story, our 3D coverflow brings your content to life with fluid animations and intuitive controls.</p>
+                    <h3>🌟 Elevate My Journey</h3>
+                    <p>Step into a visual showcase of my story, achievements, and passions. This space is more than just images—it’s a glimpse into who I am and what I create.</p>
+                    <p>Whether it’s showcasing my skills, projects, or the milestones I’ve achieved, this interactive gallery brings my journey to life with engaging visuals and smooth transitions.</p>
                     
                     <ul class="feature-list">
                         <li>Smooth 3D transitions with hardware acceleration</li>
@@ -335,6 +335,7 @@ https://templatemo.com/tm-595-3d-coverflow
 </body>
 
 </html>
+
 
 
 
