--- a/index.html
+++ b/index.html
@@ -177,20 +177,20 @@ https://templatemo.com/tm-595-3d-coverflow
             
             <div class="stats-section">
                 <div class="stat-item">
-                    <div class="stat-number">60fps</div>
-                    <div class="stat-label">Smooth Performance</div>
+                    <div class="stat-number">EDUCATION</div>
+                    <div class="stat-label">IIT Dholakpur</div>
                 </div>
                 <div class="stat-item">
-                    <div class="stat-number">100%</div>
-                    <div class="stat-label">Responsive Design</div>
+                    <div class="stat-number">EXPERIENCE</div>
+                    <div class="stat-label">2yrs in Web Development</div>
                 </div>
                 <div class="stat-item">
-                    <div class="stat-number">3D</div>
-                    <div class="stat-label">Visual Effects</div>
+                    <div class="stat-number">SKILLS</div>
+                    <div class="stat-label">HTML • CSS • JavaScript • Python • AI Tools</div>
                 </div>
                 <div class="stat-item">
-                    <div class="stat-number">∞</div>
-                    <div class="stat-label">Customization</div>
+                    <div class="stat-number">ACHIEVEMENTS</div>
+                    <div class="stat-label">Self Satisfiction</div>
                 </div>
             </div>
         </div>
@@ -334,6 +334,7 @@ https://templatemo.com/tm-595-3d-coverflow
 </body>
 
 </html>
+
 
 
 
