--- a/index.html
+++ b/index.html
@@ -177,19 +177,19 @@ https://templatemo.com/tm-595-3d-coverflow
             
             <div class="stats-section">
                 <div class="stat-item">
-                    <div class="stat-number">EDUCATION</div>
+                    <div class="stat-number">🎓</div>
                     <div class="stat-label">IIT Dholakpur</div>
                 </div>
                 <div class="stat-item">
-                    <div class="stat-number">EXPERIENCE</div>
+                    <div class="stat-number">💼</div>
                     <div class="stat-label">2yrs in Web Development</div>
                 </div>
                 <div class="stat-item">
-                    <div class="stat-number">SKILLS</div>
+                    <div class="stat-number">🛠</div>
                     <div class="stat-label">HTML • CSS • JavaScript • Python • AI Tools</div>
                 </div>
                 <div class="stat-item">
-                    <div class="stat-number">ACHIEVEMENTS</div>
+                    <div class="stat-number">🏆</div>
                     <div class="stat-label">Self Satisfiction</div>
                 </div>
             </div>
@@ -334,6 +334,7 @@ https://templatemo.com/tm-595-3d-coverflow
 </body>
 
 </html>
+
 
 
 
