--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ https://templatemo.com/tm-595-3d-coverflow
                 </div>
                 <div class="stat-item">
                     <div class="stat-number">🛠</div>
-                    <div class="stat-label">HTML • CSS • JavaScript • Python • AI Tools</div>
+                    <div class="stat-label">HTML • CSS • AI Tools</div>
                 </div>
                 <div class="stat-item">
                     <div class="stat-number">🏆</div>
@@ -334,6 +334,7 @@ https://templatemo.com/tm-595-3d-coverflow
 </body>
 
 </html>
+
 
 
 
