--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ https://templatemo.com/tm-595-3d-coverflow
             <div class="contact-container">
                 <div class="contact-info-section">
                     <h3>Let's Connect</h3>
-                    <p>We're here to help bring your vision to life. Whether you need a stunning gallery, a complete website redesign, or custom development work, we'd love to hear from you.</p>
+                    <p>I’m just a message away—let’s build something amazing together</p>
                     
                     <div class="contact-details">
                         <div class="contact-item">
@@ -334,6 +334,7 @@ https://templatemo.com/tm-595-3d-coverflow
 </body>
 
 </html>
+
 
 
 
